# my-code-DWD-

./: DWD_GW_evolution.py  README.md  add_3D_dust_map.py  deploy_dustmaps_data.py  fixed_population.py  gbfisher_input_generate.py  lsst_magnitudes_calculator.py  mag_interpolation.py  wd_spectrum_interpolation.py  使用说明 (1)  如何将环境打包到计算机集群中？  查询观测时间点以及误差.py  生成理论光变曲线.py
AllTables/: Table_Mass_0.2  Table_Mass_0.3  Table_Mass_0.4  Table_Mass_0.5  Table_Mass_0.6  Table_Mass_0.7  Table_Mass_0.8  Table_Mass_0.9  Table_Mass_1.0  Table_Mass_1.1  Table_Mass_1.2  Table_Mass_1.3
AllTables_with_CSST/: Table_Mass_0.2  Table_Mass_0.3  Table_Mass_0.4  Table_Mass_0.5  Table_Mass_0.6  Table_Mass_0.7  Table_Mass_0.8  Table_Mass_0.9  Table_Mass_1.0  Table_Mass_1.1  Table_Mass_1.2  Table_Mass_1.3
AllTables_with_LSST/: Table_Mass_0.2  Table_Mass_0.3  Table_Mass_0.4  Table_Mass_0.5  Table_Mass_0.6  Table_Mass_0.7  Table_Mass_0.8  Table_Mass_0.9  Table_Mass_1.0  Table_Mass_1.1  Table_Mass_1.2  Table_Mass_1.3
LISA范围中有光变曲线DWD/: mag_interpolation_LSST_CSST.py  筛选通过卡方值检验的DWD.py  计算卡方值.py
LISA范围中有光变曲线DWD/通过卡方值检验的DWD/fisher_results/LSST稀疏光变曲线分析/: calc_effective_threshold.py  位置+距离矩阵.py  统计有光变曲线+SB.py  计算光变曲线的fisher信息矩阵.py
LISA范围中有光变曲线DWD/通过卡方值检验的DWD/绘制corner图/: dwd_1_interpolated_lightcurve.h5  plot.py
dustmaps3d-main/: LICENSE  README.md  README.zh-CN.md  pyproject.toml  upgithub.py  upload.py
dustmaps3d-main/dustmaps3d/: __init__.py  cli.py  core.py
dustmaps3d-main/dustmaps3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+4 files in other folders)
