[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dustmaps3d"
version = "2.1.26"
description = "An all-sky 3D dust map based on Gaia and LAMOST."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Wang Tao", email = "wt@mail.bnu.edu.cn"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy>=2.3.2",
  "pandas>=1.3",
  "astropy>=5.0",
  "astropy-healpix>=0.6",
  "tqdm>=4.60",
  "platformdirs>=2.3",
  "fastparquet>=0.8",
  "requests>=2.20.0",
  "pyarrow>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/SunnyHina/dustmaps3d"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
dust = "dustmaps3d.cli:main"